src/test.css
body {
    background-color: rgb(191, 246, 246);
    font-family: Arial, Helvetica, sans-serif;
}

.container {
    margin: 50px;
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 20px;
}

.btn {
    display: inline-block;
    font-size: 20px;
    border: none;
    margin: 5px;
    padding: 5px;
    border-radius: 10px;
    cursor: pointer;
    transform: rotate(-360deg);
    transition: 1000ms;
}

.btn:focus {
    outline: none;
}
  
.btn:active {
    transform: rotate(360deg);
    transition: 500ms;
}

.main {
    display: grid;
    background-color: rgb(13, 9, 245);
    padding: 20px;
    border-radius: 20px;
}

.main > .para, .main > .form {
    grid-column-start: 1;
    grid-column-end: 3;
    background-color: rgb(191, 246, 246);
    padding: 10px;
    border-radius: 20px;
    margin: 10px;
}

.main > .form {
    display: grid;
    grid-template-columns: 28% 28% 28% 16%;
}

.form-input-text {
    border-radius: 5px;
    margin-bottom: 5px;
}

a:focus, button:focus, input:focus, textarea:focus {
    outline: none;
}

.main > .btn {
    max-height: 40px;
    grid-column-start: 4;
    grid-column-end: 4;
    position: relative;
    top: 40%
}

.form-collumn-1 {
    grid-column-start: 1;
}

.form-collumn-2 {
    grid-column-start: 2;
}

.form-collumn-3 {
    grid-column-start: 3;
}

.form-collumn-4 {
    grid-column-start: 4;
    display: flex;
    align-items: center;
}

